Ajustes en promocion y en el metodo de llamar las busquedas

--- a/module/Admin/view/admin/promocion/buscar.phtml
+++ b/module/Admin/view/admin/promocion/buscar.phtml
@@ -1,15 +1,15 @@
 <script type="text/javascript">
+
     $(document).ready(function () {
-        $('#dtbuscarTercero').DataTable();
-        LimpiarModal('<?php echo $this->botonClose ?>','<?php echo $this->contenedorDialog ?>','<?php echo $this->modal ?>');
+        $('#dtbuscarPromocion').DataTable();
+
     });
 </script>
-<?php $parametrosGet = "&botonClose=".$this->botonClose."&contenedorDialog=".$this->contenedorDialog."&modal=".$this->modal; ?>
 <div class="row">  
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" id="btnClosePop" data-dismiss="modal" aria-hidden="true">×</button>
-            <h4 class="modal-title" id="textModalLabel"><h4 class="text-light">Búsqueda de <strong>Saldo Inventario</strong></h4></h4>
+            <h4 class="modal-title" id="textModalLabel"><h4 class="text-light">Búsqueda de <strong>Promociones</strong></h4></h4>
         </div>
         <div class="box-body">
             <?php echo $this->form()->openTag($form); ?>
@@ -19,29 +19,25 @@
                 </div>
                 <div class="col-lg-3 col-md-11 col-sm-9">
                     <?php echo $this->formElement($form->get('nombreProducto')); ?>
-                    <?php echo $this->formElement($form->get('idProducto')); ?>
+                    <?php echo $this->formElement($form->get('idSaldoInventario')); ?>
                 </div>
                 <div class="col-lg-1">
-                    <?php echo $this->formElement($form->get('btnBuscarProducto2')); ?> 
+                    <?php echo $this->formElement($form->get('btnBuscarSaldoInventario2')); ?> 
                 </div>
             </div>
 
             <div class="form-group">
                 <div class="col-lg-1 col-md-2 col-sm-3">
-                    <label for="email1" class="control-label">Proveedor</label>
+                    <label for="email1" class="control-label">Estado</label>
                 </div>
                 <div class="col-lg-3 col-md-11 col-sm-9">
-                    <?php echo $this->formElement($form->get('nombreProveedor')); ?>
-                    <?php echo $this->formElement($form->get('idProveedor')); ?>
-                </div>
-                <div class="col-lg-1">
-                    <?php echo $this->formElement($form->get('btnBuscarProveedor2')); ?> 
+                    <?php echo $this->formElement($form->get('estado')); ?>
                 </div>
             </div>
 
             <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
                 <input name="btnBuscar" id="btnBuscar" type="button" title="Buscar" style="margin:2px" class="btn btn-success" value="Buscar" 
-                       onclick="usar_ajax('<?php echo $this->basePath() ?>/admin/saldoinventario/buscar?origen=<?php echo $this->origen ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>&campoCantidad=<?php echo $this->campoCantidad ?>&campoValorVenta=<?php echo $this->campoValorVenta ?>&campoIdProducto=<?php echo $this->campoIdProducto ?><?php echo $parametrosGet ?> ', '#<?php echo $this->contenedorDialog ?>', 'idProducto=' + $('#idProducto').val() + '&amp;nombreProducto=' + $('#nombreProducto').val() + '&amp;idProveedor=' + $('#idProveedor').val() + '&amp;nombreProveedor=' + $('#nombreProveedor').val());
+                       onclick="usar_ajax('<?php echo $this->Uri ?>', '#'+$.getParameter('modalDialogDisplay','<?php  echo $this->Uri ?>') , 'idProducto=' + $('#idProducto').val() + '&amp;nombreProducto=' + $('#nombreProducto').val() + '&amp;idProveedor=' + $('#idProveedor').val() + '&amp;nombreProveedor=' + $('#nombreProveedor').val());
                                ">
                        <?php
                        echo $this->formElement($form->get('btnCancelar'));
@@ -53,36 +49,33 @@
         <div class="box "> 
             <div class="box-body table-responsive">
                 <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                    <table id="dtbuscarTercero" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
+                    <table id="dtbuscarPromocion" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
                         <thead>
                             <tr role="row">
                                 <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Producto</th>
-                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Marca</th>
-                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Categoria</th>
-                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Proveedor</th>
-                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Cantidad</th>
-                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Costo Total</th>
-                                <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Valor Venta</th>
-
+                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Valor Anterior</th>
+                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Valor Promoción</th>
+                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Fecha Desde</th>
+                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Fecha Hasta</th>
+                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Estado</th>
                             </tr>
                         </thead>
                         <tbody>
                             <?php
                             foreach ($this->registros as $obj) 
                             {
-                                $onClick = "$('#".$this->campoId."').val(".$obj['idSaldoInventario'].");$('#".$this->campoNombre."').val('".$obj['descripcionProducto']."');$('#".$this->campoCantidad."').val('".$obj['cantidad']."'); $('#".$this->campoValorVenta."').val('".$obj['valorVenta']."');$('#".$this->campoIdProducto."').val('".$obj['idProducto']."');$('#".$this->botonClose."').click();";
+                                $onClick = "$('#idPromocion').val(".$obj['idPromocion'].");$('#".$this->botonClose."').click();";
                                 if ($this->origen != null) {
-                                    $onClick = "$(location).attr('href','".$this->BasePath()."/admin/".$this->origen."?idSaldoInventario=".$obj['idSaldoInventario']."')";
+                                    $onClick = "$(location).attr('href','".$this->BasePath()."/admin/".$this->origen."?idPromocion=".$obj['idPromocion']."')";
                                 }
                                 echo "
                                     <tr class='gradeX odd' style='cursor:pointer' onClick=\"".$onClick."\">
                                         <td>".$obj['descripcionProducto']."</td>
-                                        <td>".$obj['descripcionMarca']."</td>
-                                        <td>".$obj['descripcionCategoria']."</td>
-                                        <td>".$obj['descripcionProveedor']."</td>
-                                        <td>".number_format($obj['cantidad'])."</td>
-                                        <td>$".number_format($obj['costoTotal'])."</td>
-                                        <td>$".number_format($obj['valorVenta'])."</td>
+                                        <td>$".number_format($obj['valorAnterior'])."</td>
+                                        <td>$".number_format($obj['valorPromocion'])."</td>
+                                        <td>".$obj['fechaDesde']."</td>
+                                        <td>".$obj['fechaHasta']."</td>
+                                        <td>".$obj['estado']."</td>
                                     </tr>";
                             }
                             ?>
