--- a/module/Admin/view/admin/promocion/index.phtml
+++ b/module/Admin/view/admin/promocion/index.phtml
@@ -22,7 +22,7 @@ if ($this->validacion != null) {
                 
                 <div class="tools">
                     <div class="btn-group btn-group-transparent">
-                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="usar_ajax('<?php echo $this->basePath()?>/admin/promocion/buscar','#modal-dialog-display','')"><i class="fa  fa-search"></i></a>
+                        <a class="btn btn-equal btn-sm " data-toggle="modal" onclick="showBusquedaOnModal(this,'<?php echo $this->basePath()?>/admin/promocion/buscar?origen=promocion/index','')"><i class="fa  fa-search"></i></a>
                     </div>
                 </div>
             </div>
