--- a/module/Admin/view/admin/saldo-inventario/buscar.phtml
+++ b/module/Admin/view/admin/saldo-inventario/buscar.phtml
@@ -22,7 +22,7 @@
                     <?php echo $this->formElement($form->get('idProducto')); ?>
                 </div>
                 <div class="col-lg-1">
-                    <?php echo $this->formElement($form->get('btnBuscarProducto2')); ?> 
+                    <?php echo $this->formElement($form->get('btnBuscarProducto')); ?> 
                 </div>
             </div>
 
