--- a/module/Admin/view/admin/cliente/buscar.phtml
+++ b/module/Admin/view/admin/cliente/buscar.phtml
@@ -1,14 +1,12 @@
-<?php $parametrosGet = "&botonClose=".$this->botonClose."&contenedorDialog=".$this->contenedorDialog."&modal=".$this->modal; ?>
 <script type="text/javascript">
     $(document).ready(function () {
         $('#dtbuscarCliente').DataTable();
-        LimpiarModal('<?php echo $this->botonClose ?>','<?php echo $this->contenedorDialog ?>','<?php echo $this->modal ?>');
     });
 </script>
 <div class="row">  
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" id="<?php echo $this->botonClose ?>" data-dismiss="modal" aria-hidden="true">×</button>
+            <button type="button" class="close" id="btnCloseBusquedaCliente" data-dismiss="modal" aria-hidden="true">×</button>
             <h4 class="modal-title" id="textModalLabel"><h4 class="text-light">Búsqueda de <strong>Cliente</strong></h4></h4>
         </div>
         <div class="box-body">
@@ -33,7 +31,7 @@
 
             <div class="form-footer col-lg-offset-1 col-md-offset-2 col-sm-offset-3">
                 <input name="btnBuscar" id="btnBuscar" type="button" title="Buscar" style="margin:2px" class="btn btn-success" value="Buscar" 
-                       onclick="usar_ajax('<?php echo $this->basePath()?>/admin/cliente/buscar?campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?><?php echo $parametrosGet ?> ','#<?php echo $this->contenedorDialog ?>','nit='+$('#nit').val()+'&amp;descripcion='+$('#descripcion').val());">
+                       onclick="usar_ajax('<?php echo $this->Uri ?>', '#'+$.getParameter('modalDialogDisplay','<?php  echo $this->Uri ?>'),'nit='+$('#nit').val()+'&amp;descripcion='+$('#descripcion').val());">
                 <?php
                     echo $this->formElement($form->get('btnCancelar'));
                 ?>
@@ -56,7 +54,7 @@
                              <?php 
                             foreach ($this->registros as $obj) {
                                 echo "
-                                    <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#".$this->campoId."').val(".$obj['idCliente'].");$('#".$this->campoNombre."').val('".$obj["descripcionTercero"]."');$('#". $this->botonClose ."').click();\">
+                                    <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#".$this->campoId."').val(".$obj['idCliente'].");$('#".$this->campoNombre."').val('".$obj["descripcionTercero"]."');$('#btnCloseBusquedaCliente').click();\">
                                         <td>".$obj['descripcionTercero']."</td>
                                         <td>".$obj['descripcionMunicipio']."</td>
                                         <td>".$obj['email']."</td>
