--- a/module/Admin/view/admin/pedido-venta/buscar.phtml
+++ b/module/Admin/view/admin/pedido-venta/buscar.phtml
@@ -1,12 +1,10 @@
-<?php $parametrosGet = "&botonClose=".$this->botonClose."&contenedorDialog=".$this->contenedorDialog."&modal=".$this->modal; ?>
 <script type="text/javascript">
     $(document).ready(function() {
         $('#dtbuscarPedidoVenta').DataTable();
-        LimpiarModal('<?php echo $this->botonClose ?>','<?php echo $this->contenedorDialog ?>','<?php echo $this->modal ?>');
     });
     function btnBuscar_onclick()
     {
-        usar_ajax("<?php echo $this->basePath()?>/admin/pedidoventa/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?><?php echo $parametrosGet ?>",'#<?php echo $this->contenedorDialog ?>',"numeroPedido="+$('#numeroPedidoBusqueda').val()+"&idCliente="+$('#idCliente').val()+"&nombreCliente="+$('#nombreClienteBusqueda').val()+"&idEstadoPedido="+$('#idEstadoPedido').val());
+        showBusquedaOnModal(this,"<?php echo $this->basePath()?>/admin/pedidoventa/buscar?vista=<?php echo $this->vista ?>&campoId=<?php echo $this->campoId ?>&campoNombre=<?php echo $this->campoNombre ?>",'#'+$.getParameter('modalDialogDisplay','<?php  echo $this->Uri ?>'),"numeroPedido="+$('#numeroPedidoBusqueda').val()+"&idCliente="+$('#idCliente').val()+"&nombreCliente="+$('#nombreClienteBusqueda').val()+"&idEstadoPedido="+$('#idEstadoPedido').val());
     }
 </script>
   
@@ -34,10 +32,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-5">
                     <?php echo $this->formInput($form->get('nombreCliente'));?>  
                 </div>
-                <!-- Se quema el boton por que se hace necesario pasar el campoId y el campoNombre -->
-                <input name="btnBuscarCliente2" id="btnBuscarProveedor2" type="button" title="Buscar" data-target="#textModal2" data-toggle="modal" style="margin:2px" class="btn btn-support2" value="Buscar" 
-                       onclick="usar_ajax('/evo-master/admin/cliente/buscar?campoId=idCliente&campoNombre=nombreClienteBusqueda&botonClose=btnClosePop2&amp;contenedorDialog=modal-dialog-display2&amp;modal=textModal2','#modal-dialog-display2','')">  
-               
+                <?php echo $this->formInput($form->get('btnBuscarCliente')->setAttribute("onClick", "showBusquedaOnModal(this,'".$this->basePath()."/admin/cliente/buscar?campoId=idCliente&campoNombre=nombreClienteBusqueda','')"));?>  
             </div>
             <div class="form-group">
                 <div class="col-lg-1 col-md-2 col-sm-3">
