--- a/module/Admin/view/admin/categoria/buscar.phtml
+++ b/module/Admin/view/admin/categoria/buscar.phtml
@@ -1,7 +1,6 @@
 <script type="text/javascript">
-    $(document).ready(function() {
-        $('#dtbuscarCategoria').DataTable(); 
-        LimpiarModal('<?php echo $this->botonClose ?>','<?php echo $this->contenedorDialog ?>','<?php echo $this->modal ?>');
+    $(document).ready(function () {
+        $('#dtbuscarCategoria').DataTable();
     });
 </script>
 <div class="row">
@@ -11,7 +10,7 @@
                 <div class="box box-bordered">
                     <div class="box-head">
                         <header><h4 class="text-light"><strong>Categorias</strong></h4></header>
-                        <a class="btn btn-equal btn-sm btn-close" id="btnClosePop" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
+                        <a class="btn btn-equal btn-sm btn-close" id="btnCloseBusquedaCategoria" style="float: right" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></a>
                     </div>
                     <div class="box"> 
                         <div class="box-body table-responsive">
@@ -24,18 +23,25 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                         <?php 
+                                        <?php
                                         foreach ($this->registros as $obj) {
+
+                                            $onClick = "$('#idCategoria').val(" . $obj['idCategoria'] . ");$('#btnCloseBusquedaCategoria').click();";
+                                                       
+                                            if ($this->origen != null) {
+                                                $onClick = "$(location).attr('href','" . $this->BasePath() . "/admin/" . $this->origen . "?idCategoria=" . $obj['idCategoria'] . "');";
+                                            }
+
                                             echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$('#idCategoria').val(".$obj['idCategoria'].");$('#". $this->botonClose ."').click();\">
-                                                    <td>".$obj['codigo']."</td>
-                                                    <td>".$obj['descripcion']."</td>
+                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"". $onClick ."\">
+                                                    <td>" . $obj['codigo'] . "</td>
+                                                    <td>" . $obj['descripcion'] . "</td>
                                                 </tr>";
                                         }
                                         ?>
                                     </tbody>
                                 </table>
-                             </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -43,4 +49,3 @@
         </div>
     </div>
 </div>
- 
