--- a/module/Admin/view/admin/dato-basico-tercero/index.phtml
+++ b/module/Admin/view/admin/dato-basico-tercero/index.phtml
@@ -8,10 +8,26 @@ if ($this->msg != null) {
 ?>
 <div class="row">
     <div class="col-lg-12">
-        <div class="box">
+        <div class="box box-bordered style-primary">
             <div class="box-head">
-                <header><h4 class="text-light">Formulario <strong>Dato Basico Tercero</strong></h4></header>
+                <header>
+                    <h4 class="text-light">
+                       Formulario <strong>Dato Basico Tercero</strong> 
+                    </h4>
+                </header>
+                
+                <div class="tools">
+                    <div class="btn-group btn-group-transparent">
+                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="showBusquedaOnModal(this,'<?php echo $this->basePath()?>/admin/datobasicotercero/buscar?origen=datobasicotercero/index','')"><i class="fa  fa-search"></i></a>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    
+    <div class="col-lg-12">
+        <div class="box">
+          
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
                 <?php echo $this->formInput($form->get('idDatoBasicoTercero')); ?>
@@ -101,55 +117,5 @@ if ($this->msg != null) {
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros) > 0) { ?>       
-            <div class="row">  
-                <div class="col-lg-12">
-                    <div class="box box-bordered">
-                        <div class="box-head">
-                            <header><h4 class="text-light"><strong>Dato Basico Terceros</strong> <small>Todas</small></h4></header>
-                        </div>
-                        <div class="box"> 
-                            <div class="box-body table-responsive">
-                                <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                    <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                        <thead>
-                                            <tr role="row">
-                                                <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Tipo Documento</th>
-                                                <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nif</th>
-                                                <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Descripción</th>
-                                                <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Nombre</th>
-                                                <th lass="sorting" role="columnheader" tabindex="5" aria-controls="dtcrudindex" rowspan="1" colspan="1">Primer Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="6" aria-controls="dtcrudindex" rowspan="1" colspan="1">Segundo Apellido</th>
-                                                <th lass="sorting" role="columnheader" tabindex="7" aria-controls="dtcrudindex" rowspan="1" colspan="1">Dirección</th>
-                                                <th lass="sorting" role="columnheader" tabindex="8" aria-controls="dtcrudindex" rowspan="1" colspan="1">Teléfono</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <?php
-                                            foreach ($this->registros as $obj) {
-                                                echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '" . $this->basePath() . "/admin/datobasicotercero/index?id=" . $obj['idDatoBasicoTercero'] . "')\">
-                                                    <td>". $obj['descripcionTipoDocumento'] ."</td>
-                                                    <td>" . $obj['nit'] . "</td>
-                                                    <td>" . $obj['descripcion'] . "</td>
-                                                    <td>" . $obj['primerNombre'] . "</td>
-                                                    <td>" . $obj['segundoNombre'] . "</td>
-                                                    <td>" . $obj['primerApellido'] . "</td>
-                                                    <td>" . $obj['segundoApellido'] . "</td>
-                                                    <td>" . $obj['direccion'] . "</td>
-                                                    <td>" . $obj['telefono'] . "</td>
-                                                </tr>";
-                                            }
-                                            ?>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        <?php } ?>
     </div>
 </div>
