--- a/module/Admin/view/admin/producto/index.phtml
+++ b/module/Admin/view/admin/producto/index.phtml
@@ -9,10 +9,26 @@ if ($this->msg != null)
 ?>
 <div class="row">
     <div class="col-lg-12">
-        <div class="box">
+        <div class="box box-bordered style-primary">
             <div class="box-head">
-                <header><h4 class="text-light">Formulario <strong>Producto</strong></h4></header>
+                <header>
+                    <h4 class="text-light">
+                       Formulario <strong>Producto</strong> 
+                    </h4>
+                </header>
+                
+                <div class="tools">
+                    <div class="btn-group btn-group-transparent">
+                        <a class="btn btn-equal btn-sm " data-target="#textModal" data-toggle="modal" onclick="showBusquedaOnModal(this,'<?php echo $this->basePath()?>/admin/producto/buscar?origen=producto/index','')"><i class="fa  fa-search"></i></a>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+    
+    <div class="col-lg-12">
+        <div class="box">
+            
             <div class="box-body">
                 <?php echo $this->form()->openTag($form); ?>
                     <?php echo $this->formInput($form->get('idProducto'));?>
@@ -89,48 +105,6 @@ if ($this->msg != null)
                 <?php echo $this->form()->closeTag(); ?>
             </div>
         </div><!--end .box -->
-        <?php if (count($this->registros)>0) { ?>       
-        <div class="row">  
-            <div class="col-lg-12">
-                <div class="box box-bordered">
-                    <div class="box-head">
-                        <header><h4 class="text-light"><strong>Productos</strong> <small>Todas</small></h4></header>
-                    </div>
-                    <div class="box"> 
-                        <div class="box-body table-responsive">
-                            <div id="dtcrudindex_wrapper" class="dataTables_wrapper" role="grid">
-                                <table id="dtbuscar" class="table table-striped table-hover dataTable" aria-describedby="dtcrudindex_info">
-                                    <thead>
-                                        <tr role="row">
-                                            <th lass="sorting" role="columnheader" tabindex="0" aria-controls="dtcrudindex" rowspan="1" colspan="1">Referencia</th>
-                                            <th lass="sorting" role="columnheader" tabindex="1" aria-controls="dtcrudindex" rowspan="1" colspan="1">Codigo</th>
-                                            <th lass="sorting" role="columnheader" tabindex="2" aria-controls="dtcrudindex" rowspan="1" colspan="1">Nombre</th>
-                                            <th lass="sorting" role="columnheader" tabindex="3" aria-controls="dtcrudindex" rowspan="1" colspan="1">Marca</th>
-                                            <th lass="sorting" role="columnheader" tabindex="4" aria-controls="dtcrudindex" rowspan="1" colspan="1">Categoria</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                         <?php 
-                                        foreach ($this->registros as $obj) {
-                                            echo "
-                                                <tr class='gradeX odd' style='cursor:pointer' onClick=\"$(location).attr('href', '".$this->basePath()."/admin/producto/index?id=".$obj['idProducto']."')\">
-                                                    <td>".$obj['referencia']."</td>
-                                                    <td>".$obj['codigo']."</td>
-                                                    <td>".$obj['nombre']."</td>
-                                                    <td>".$obj['descripcionMarca']."</td>
-                                                    <td>".$obj['descripcionCategoria']."</td>
-                                                </tr>";
-                                        }
-                                        ?>
-                                    </tbody>
-                                </table>
-                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <?php } ?>
     </div>
 </div>
  
